# NovaGuard

./: .env.example  .gitignore  README.md  debug_output.txt  docker-compose.yml  pyproject.toml  stream.md  verify_output.txt  verify_output_2.txt  verify_output_3.txt  verify_output_5.txt
.agent/workflows/: nova-guard.md
alembic/: env.py
alembic/versions/: 20260209_1837_5fe76e0791fd_initial_schema_patients_drug_history_.py  20260210_0901_3afdeb4baeae_add_patient_vitals.py  20260211_2230_473474038aaa_add_user_auth.py
frontend/: bun.lockb  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json
frontend/src/: App.tsx  index.css
frontend/src/components/: DashboardLayout.tsx  DrugOperationsModule.tsx  Header.tsx  PatientDatabaseModule.tsx  PatientForm.tsx  PatientHeader.tsx  PrescriptionInput.tsx  SafetyAnalysis.tsx  SafetyChat.tsx  SafetyHUD.tsx  Sidebar.tsx
frontend/src/context/: SessionContext.tsx
frontend/src/hooks/: useAudioRecorder.ts  useSession.ts
frontend/src/pages/: LandingPage.tsx  LoginPage.tsx
frontend/src/services/: api.ts
src/nova_guard/: __init__.py  config.py  database.py  main.py
src/nova_guard/api/: auth.py  patients.py  sessions.py
src/nova_guard/graph/: nodes.py  state.py  workflow.py
src/nova_guard/models/: audit.py  patient.py  session.py  user.py
src/nova_guard/schemas/: patient.py  session.py
src/nova_guard/services/: audit_service.py  bedrock.py  cache.py  clinical_tools.py  nlp.py  nova_voice.py  openfda.py  rxnorm.py
tests/: verify_typo.py  verify_validation.py
(+2 files in other folders)
