[project]
name = "nova-guard"
version = "0.1.0"
description = "Nova Clinical Guard - AI-powered prescription safety auditing system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web Framework
    "fastapi[all]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    # AI & Orchestration
    "langgraph>=0.2.60",
    "langchain>=0.3.14",
    "langchain-aws>=0.2.9",
    # Data Validation
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.0",
    # HTTP Client
    "httpx>=0.28.1",
    # Environment
    "python-dotenv>=1.0.1",
    # AWS
    "boto3>=1.34.0",
    # AI - OpenAI Compatible
    "openai>=1.59.0",
    "langgraph-checkpoint-postgres>=3.0.4",
    "psycopg-binary>=3.1.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.1",  # For testing FastAPI endpoints
    "ruff>=0.8.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line too long (handled by formatter)
